fixed overflow issue

--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,6 @@ h2 {
 
 p {
     margin-bottom: 20px;
-    white-space: pre;
 }
 
 code {
